--- a/build.gradle
+++ b/build.gradle
@@ -11,19 +11,36 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+//apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
-group = 'id.ridon.rss'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
-repositories {
-	mavenCentral()
+springBoot {
+    executable = true
 }
 
+repositories {
+    mavenCentral()
+}
+
+group = 'id.ridon.rss'
+version = '0.0.1'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-devtools")
 	compile('org.springframework.boot:spring-boot-starter')
+
+    //runtime('mysql:mysql-connector-java')
+    //compile('org.springframework.boot:spring-boot-starter-jdbc')
+    //compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    compile('org.springframework.boot:spring-boot-starter-web')
+    //compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile 'org.springframework.security.oauth:spring-security-oauth2:2.2.0.RELEASE'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
